заменила субд на пг

--- a/LibraryMPT.Api/appsettings.json
+++ b/LibraryMPT.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LibraryDb": "Server=DESKTOP-L575937\\SQLEXPRESS;Database=ElectronicLibraryv5;Trusted_Connection=True;TrustServerCertificate=True;"
+    "LibraryDb": "Host=localhost;Port=5432;Database=ElectronicLibraryv5;Username=postgres;Password=1;Include Error Detail=true"
   },
   "JwtSettings": {
     "Issuer": "LibraryMPT",
